# cv_test_task

./: .gitignore  DIARY.md  README.md  dishes_detector.py  pyproject.toml
