[project]
name = "cv-dishes"
version = "0.1.0"
description = ""
authors = [
    {name = "IvanArsenev",email = "arsenev.ivan00@bk.ru"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
]

[tool.poetry.dependencies]
python = "3.11"
torch = { version = "*", source = "pytorch" }
torchvision = { version = "*", source = "pytorch" }
torchaudio = { version = "*", source = "pytorch" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
