[project]
name = "cv-dishes"
version = "0.1.0"
description = ""
authors = [
    {name = "IvanArsenev",email = "arsenev.ivan00@bk.ru"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "opencv-python-headless (>=4.11.0.86,<5.0.0.0)",
    "ultralytics (>=8.3.158,<9.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
]

[tool.poetry.dependencies]
python = "3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
